--- a/coffeeclub.html
+++ b/coffeeclub.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link href="styles.css" type="text/css" rel="stylesheet">
+    <link href="coffeeclubstyles.css" type="text/css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Poppins:wght@300&display=swap" rel="stylesheet">
 
   </head>
